// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Drawer /> > should pass className 1`] = `
.emotion-0 {
  position: fixed;
  z-index: 1300;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  visibility: hidden;
}

.emotion-1 {
  background: var(--pv-color-black);
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  -webkit-tap-highlight-color: transparent;
}

.emotion-2 {
  width: 270px;
  height: 100%;
  position: fixed;
  top: 0;
  right: 0;
  overflow-y: auto;
  outline: none;
  box-sizing: border-box;
  background-color: var(--pv-color-white);
}

<body>
  <div />
  <div
    aria-hidden="true"
    class="emotion-0"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="emotion-1"
      style="opacity: 0; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; visibility: hidden;"
    />
    <div
      class="my-class-name emotion-2"
      style="transform: translateX(100%); transition: transform 225ms cubic-bezier(0, 0, 0.2, 1) 0ms; visibility: hidden;"
      tabindex="-1"
    >
      Inside
    </div>
  </div>
</body>
`;

exports[`<Drawer /> > should render with default open styles 1`] = `
.emotion-0 {
  position: fixed;
  z-index: 1300;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
}

.emotion-1 {
  background: var(--pv-color-black);
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  -webkit-tap-highlight-color: transparent;
}

.emotion-2 {
  width: 270px;
  height: 100%;
  position: fixed;
  top: 0;
  right: 0;
  overflow-y: auto;
  outline: none;
  box-sizing: border-box;
  background-color: var(--pv-color-white);
}

<body>
  <div />
  <div
    aria-hidden="false"
    class="emotion-0"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="emotion-1"
      style="opacity: 0.5; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="emotion-2"
      style="transform: translateX(0px); transition: transform 225ms cubic-bezier(0, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      Inside
    </div>
  </div>
</body>
`;

exports[`<Drawer /> > should render with default styles 1`] = `
.emotion-0 {
  position: fixed;
  z-index: 1300;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  visibility: hidden;
}

.emotion-1 {
  background: var(--pv-color-black);
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  -webkit-tap-highlight-color: transparent;
}

.emotion-2 {
  width: 270px;
  height: 100%;
  position: fixed;
  top: 0;
  right: 0;
  overflow-y: auto;
  outline: none;
  box-sizing: border-box;
  background-color: var(--pv-color-white);
}

<body>
  <div />
  <div
    aria-hidden="true"
    class="emotion-0"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="emotion-1"
      style="opacity: 0; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; visibility: hidden;"
    />
    <div
      class="emotion-2"
      style="transform: translateX(100%); transition: transform 225ms cubic-bezier(0, 0, 0.2, 1) 0ms; visibility: hidden;"
      tabindex="-1"
    >
      Inside
    </div>
  </div>
</body>
`;
